# SaltSimulator

./: .gitignore  README.md  negResp-Atts.vector  negResp.bms  negResp.vtk  pixi.toml  pyproject.toml  resp.vec  respRez.vec
data/: mesh.msh  mesh_auto2.msh  testgrid.csv
ertoolbox/: __init__.py  database_io.py  ert_inversion.py  ert_mesh.py  ert_parsers.py  ert_postprocessing.py  ert_preprocessing.py  ert_simulation.py  lib.py
ertoolbox.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
ertoolbox/data/: Salt_intrusion_1_layer.geo  Salt_intrusion_2_layers.geo  crosssection_sal_tem_20220801_0000.csv  cs_694.csv  dd_1m_64el_6l.txt  inversiontest.txt  kornwerderzand_1l.geo  kornwerderzand_1l.msh  kornwerderzand_1l_electrodes.geo  kornwerderzand_1l_electrodes.msh  kornwerderzand_1l_inversion.geo  kornwerderzand_1l_inversion.msh  kornwerderzand_1l_point_refine.geo  kornwerderzand_2l.geo  kornwerderzand_2l.msh  kornwerderzand_6l.geo  kornwerderzand_6l.msh  kornwerderzand_6l_electrodes.geo  kornwerderzand_6l_electrodes.msh  kornwerderzand_6l_point_refine.geo  output.geo  python2geo.py  slm_05m_128el_6l.txt  slm_1m_32el_6l.txt  slm_1m_64el_6l.txt  slm_1m_64el_6l_el5kapot.txt  slm_1m_64el_6l_el60kapot.txt  slm_2m_32el_6l.txt  wa_1m_64el_6l.txt
notebooks/: Acoustic_Tomography.ipynb  Electrical_Resistivity_Tomography.ipynb  Nan_PhiD_response.vector  Nan_PhiD_tD_data.vector  Nan_PhiD_tD_error.vector  Nan_PhiD_tD_response.vector  csv_to_mesh_test2.ipynb  kornwerderzand.ipynb  kornwerderzand.py  mesh2.msh  modelFail.vector  negResp-Atts.vector  negResp.bms  negResp.vtk  plot_02_crosshole_tomography.ipynb  resp.vec  respRez.vec
notebooks/.ipynb_checkpoints/: Electrical_Resistivity_Tomography-checkpoint.ipynb
notebooks/20241008-16.04/ERTManager/: mesh.bms  resistivity-cov.vector  resistivity-mesh.bms  resistivity-pd.bms  resistivity-scov.vector  resistivity.vector  resistivity.vtk
