[build-system]
requires = [
    "setuptools>=64",
    "wheel"
]
build-backend = "setuptools.build_meta"

[project]
name = "ertoolbox"
version = "0.1.0"
authors = [
    {name = "Roeland Nieboer", email = "roeland.nieboer@deltares.nl"}
]
description = "Electrical Resistivity Tomographic simualtion and inversion"
readme = "README.md"
license = {file = "LICENSE"}
classifiers = [
    "Development Status :: 2 - Pre-Alpha",
    "Intended Audience :: Science/Research/Consultans",
    "Topic :: Scientific/Engineering :: Geophysics",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python",
    "Programming Language :: Python :: 3.10",
    "Topic :: Scientific/Engineering",
]
requires-python = ">=3.10"

dependencies = [
    "numpy",
    "pandas",
    "matplotlib",
    "pygimli",
    "gmsh"
]

[project.optional-dependencies]
dev = [
    "black",
    "pytest",
    "pytest-cov",
    "ruff",
    "sphinx",
    "sphinx-rtd-theme",
]

[tool.setuptools]
packages = ["ertoolbox"]

[tool.pytest.ini_options]
testpaths = [
    "tests",
]
markers = [
	"unittest: test of single component",
	"integrationtest: test of multiple components",
]

[tool.black]
line-length = 88

[tool.ruff]
line-length = 88
target-version = "py310"
select = ["F", "E", "W", "N", "I001"]
ignore = ["F401"]
unfixable = ["F401"]

[tool.ruff.pydocstyle]
convention = "numpy"

[tool.pixi.project]
channels = ["gimli","conda-forge"]
platforms = ["linux-64", "win-64"]

[tool.pixi.pypi-dependencies]
ertoolbox = { path = ".", editable = true }

[tool.pixi.environments]
default = { solve-group = "default" }
dev = { features = ["dev"], solve-group = "default" }

[tool.pixi.tasks]
electric = 'jupyter notebook ./notebooks/Electrical_Resistivity_Tomography.ipynb'
acoustic = 'jupyter notebook ./notebooks/Acoutic_Tomography.ipynb'

[tool.pixi.dependencies]
numpy = "*"
ipykernel = "*"
pandas = "*"
jupyter = "*"
matplotlib = "*"
pygimli = ">=1.5.3,<2"
gsw = ">=3.6.19,<4"
